--- a/src/components/ProjectPage/Project.css
+++ b/src/components/ProjectPage/Project.css
@@ -52,7 +52,6 @@
 
 .Heading {
   color: #0775f0;
-  margin-bottom: 3rem;
   font-size: 1.4rem;
   font-weight: 600;
 }
